--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -11,7 +11,11 @@
   padding-left: 30px;
   font-size: 20px;
   letter-spacing: 3.636px;
+  &:hover{
+    background-color: var.$gold;
+  }
 
+  @content;
 }
 
 @mixin boton_2() {
@@ -24,7 +28,10 @@
   padding-right: 30px;
   font-size: 20px;
   letter-spacing: 3.636px;
-
+  &:hover{
+  background-color: var.$gold;
+  }
+   @content;
 }
 
 
